# Blaze

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: bench_gemm.cu
docs/: phase0.md
include/gemm/: fp4_blkscaled_gemm_sm100.cuh  fp4_gemm_sm100.cuh  fp8_gemm_sm100.cuh  mixed_gemm_sm100.cuh  tma_utils.cuh  tmem_utils.cuh
scripts/: check_env.sh  profile.sh  profile_all.sh
src/kernels/: gemm_fp16_naive.cu  gemm_fp4_blkscaled_sm100.cu  gemm_fp4_sm100.cu  gemm_fp8_sm100.cu  gemm_mixed_sm100.cu  hello_tcgen05.cu
tests/: test_gemm.cu  test_gemm_naive.cu  test_sm100_primitives.cu
